--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 # Server Configuration
-server.port=8080
+server.port=${PORT:8080}
 spring.application.name=love-dashboard-backend
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/love_dashboard?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+# Local development default values, will be overridden by environment variables in production
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/love_dashboard?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
@@ -19,14 +20,16 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 # CORS Configuration (Allow frontend access)
-spring.web.cors.allowed-origins=http://localhost:3000
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
+# For production, set CORS_ALLOWED_ORIGINS environment variable with comma-separated origins
+# Example: http://localhost:3000,https://your-app.netlify.app
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
 # File Upload Configuration
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 spring.servlet.multipart.file-size-threshold=2KB
+
+# File Storage Path (for production deployment)
+file.upload.dir=${UPLOAD_DIR:./uploads}
 
