Switch back to npm install for Netlify build

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 
 [build]
   # Build command
-  command = "cd frontend && npm ci && npm run build"
+  command = "cd frontend && npm install && npm run build"
   
   # Output directory
   publish = "frontend/build"
